fixed spacing in list for resume page

--- a/screen.css
+++ b/screen.css
@@ -46,7 +46,7 @@ h2 {
   padding-top: 1em;
   font-size: 1.5em; /* 18 / 16 = 1.125 */
   font-weight: bold;
-  padding-bottom: 1.5em;
+  padding-bottom: 1em;
   color: gray
 }
 
@@ -70,7 +70,20 @@ footer {
   color: black;
   font-weight: bold;
 }
+li ul {
+  padding-top: .611em;
+  padding-left: 1.222em; /* 22 / 18 = 1.2222222222 */
+  padding-bottom: .222em;
+}
 
+li {
+  padding-bottom: 0.222em; /* 11 / 18 = 0.6111111 */
+}
+
+ul {
+  padding-top: .225em;
+  padding-bottom: 1.225em; /* 11 / 18 = 0.6111111 */
+}
 
 /* Responsive Media */
 img {
@@ -109,6 +122,7 @@ img {
   background-color: #66ffff;
 }
 
+
 /* Modular Styles */
 /*
   Repeating style patterns.
@@ -117,6 +131,8 @@ img {
   2. concerned with adjustments to base styles,
       spacing, color, etc. etc.
 */
+
+
 
 /* State Styles */
 /*
